# sage_army_knife

./: .gitignore  README.md  build.sh  build_package.ipynb  pyproject.toml  save_patch.sh  setup.cfg
sage_army_knife/: __init__.py  chef.py  curve.py  curve.sage  lattice.py  lattice.sage  math.py  math.sage  rsa.py  rsa.sage
sage_army_knife/stolen/: boneh_durfee.py  boneh_durfee.sage  boneh_durfee.sage.patch  coppersmith.py  coppersmith.sage  coppersmith.sage.patch  dh_backdoor.py  dh_backdoor.sage  dh_backdoor.sage.patch  ec_check_param.py  ec_check_param.sage  ec_check_param.sage.orig  ec_check_param.sage.patch
src/sage_army_knife/: __init__.py  chef.py  untwister.py
src/sage_army_knife/dot_sage/: curve.py  curve.sage  cvp.py  cvp.sage  matrix.py  matrix.sage  rsa.py  rsa.sage
src/sage_army_knife/script_bag/: defund_coppersmith.py  icemonster_untwister.py  mimoo_boneh_durfee.py  mimoo_dh_backdoor.py  mimoo_dh_backdoor.sage  pqlx_ec_check_param.py  rbtree_babai_cvp.py  rbtree_babai_cvp.sage  rkm_inequality_cvp.py  rkm_inequality_cvp.sage
src/sage_army_knife/script_bag/original/: defund_coppersmith.sage  icemonster_untwister.py  mimoo_boneh_durfee.sage  mimoo_dh_backdoor.sage  pqlx_ec_check_param.sage
src/sage_army_knife/script_bag/patches/: icemonster_untwister.py.patch  mimoo_dh_backdoor.sage.patch
tests/: __init__.py  test_chef.py
tests/dot_sage/: test_cvp.py  test_cvp.sage  test_rsa.py  test_rsa.sage
