[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sage_army_knife"
version = "0.1.0"
authors = [
  { name="4yn", email="add@ress.me" },
]
description = "A mutitool for cryptography CTF problems"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pycryptodome",
    "sagemath"
]

[project.urls]
"Homepage" = "https://github.com/4yn/sage_army_knife"
"Bug Tracker" = "https://github.com/4yn/sage_army_knife/issues"