[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sage_army_knife"
version = "0.1.0"
description = "A mutitool for cryptography CTF problems"
authors = [ "4yn <add@ress.me>" ]

[tool.poetry.dependencies]
typing-extensions = { version = "^4" }
pycryptodome = { version = "^3" }
z3-solver = { version = "^4" }
pytest = { version = "^7", optional = true }

[tool.poetry.extras]
test = [ "pytest" ]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
addopts = "--disable-warnings"